[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.145098, 0.054902, 0.172549, 0.639216 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="VBoxContainer"]
margin_right = 80.0
margin_bottom = 20.0
text = "Return"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 80.0
margin_bottom = 44.0
text = "Controls"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 80.0
margin_bottom = 68.0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
